[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alkahest"
version = "0.1.0"
description = "Type dissolution primitives and the Otter engine"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
test = ["pytest", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["alkahest*"]
